Add Rental Catalog Conditionals

--- a/snippets/rental-grid-item.liquid
+++ b/snippets/rental-grid-item.liquid
@@ -230,11 +230,11 @@
           {% assign metafield_value_1 = '' %}
           
           {% if metafield_type_1 == 'department' %}
-            {% assign metafield_value_1 = product.metafields.custom.department %}
+            {% assign metafield_value_1 = product.metafields.newmediaretailer.department | default: product.metafields.newmediaretailer.Department %}
           {% elsif metafield_type_1 == 'category' %}
-            {% assign metafield_value_1 = product.metafields.custom.category %}
+            {% assign metafield_value_1 = product.metafields.newmediaretailer.category | default: product.metafields.newmediaretailer.Category %}
           {% elsif metafield_type_1 == 'subcategory' %}
-            {% assign metafield_value_1 = product.metafields.custom.subcategory %}
+            {% assign metafield_value_1 = product.metafields.newmediaretailer.subcategory | default: product.metafields.newmediaretailer.Subcategory %}
           {% endif %}
           
           {% if metafield_value_1 == metafield_condition_1 %}
@@ -251,11 +251,11 @@
           {% assign metafield_value_2 = '' %}
           
           {% if metafield_type_2 == 'department' %}
-            {% assign metafield_value_2 = product.metafields.custom.department %}
+            {% assign metafield_value_2 = product.metafields.newmediaretailer.department | default: product.metafields.newmediaretailer.Department %}
           {% elsif metafield_type_2 == 'category' %}
-            {% assign metafield_value_2 = product.metafields.custom.category %}
+            {% assign metafield_value_2 = product.metafields.newmediaretailer.category | default: product.metafields.newmediaretailer.Category %}
           {% elsif metafield_type_2 == 'subcategory' %}
-            {% assign metafield_value_2 = product.metafields.custom.subcategory %}
+            {% assign metafield_value_2 = product.metafields.newmediaretailer.subcategory | default: product.metafields.newmediaretailer.Subcategory %}
           {% endif %}
           
           {% if metafield_value_2 == metafield_condition_2 %}
@@ -272,11 +272,11 @@
           {% assign metafield_value_3 = '' %}
           
           {% if metafield_type_3 == 'department' %}
-            {% assign metafield_value_3 = product.metafields.custom.department %}
+            {% assign metafield_value_3 = product.metafields.newmediaretailer.department | default: product.metafields.newmediaretailer.Department %}
           {% elsif metafield_type_3 == 'category' %}
-            {% assign metafield_value_3 = product.metafields.custom.category %}
+            {% assign metafield_value_3 = product.metafields.newmediaretailer.category | default: product.metafields.newmediaretailer.Category %}
           {% elsif metafield_type_3 == 'subcategory' %}
-            {% assign metafield_value_3 = product.metafields.custom.subcategory %}
+            {% assign metafield_value_3 = product.metafields.newmediaretailer.subcategory | default: product.metafields.newmediaretailer.Subcategory %}
           {% endif %}
           
           {% if metafield_value_3 == metafield_condition_3 %}
@@ -293,11 +293,11 @@
           {% assign metafield_value_4 = '' %}
           
           {% if metafield_type_4 == 'department' %}
-            {% assign metafield_value_4 = product.metafields.custom.department %}
+            {% assign metafield_value_4 = product.metafields.newmediaretailer.department | default: product.metafields.newmediaretailer.Department %}
           {% elsif metafield_type_4 == 'category' %}
-            {% assign metafield_value_4 = product.metafields.custom.category %}
+            {% assign metafield_value_4 = product.metafields.newmediaretailer.category | default: product.metafields.newmediaretailer.Category %}
           {% elsif metafield_type_4 == 'subcategory' %}
-            {% assign metafield_value_4 = product.metafields.custom.subcategory %}
+            {% assign metafield_value_4 = product.metafields.newmediaretailer.subcategory | default: product.metafields.newmediaretailer.Subcategory %}
           {% endif %}
           
           {% if metafield_value_4 == metafield_condition_4 %}
@@ -314,11 +314,11 @@
           {% assign metafield_value_5 = '' %}
           
           {% if metafield_type_5 == 'department' %}
-            {% assign metafield_value_5 = product.metafields.custom.department %}
+            {% assign metafield_value_5 = product.metafields.newmediaretailer.department | default: product.metafields.newmediaretailer.Department %}
           {% elsif metafield_type_5 == 'category' %}
-            {% assign metafield_value_5 = product.metafields.custom.category %}
+            {% assign metafield_value_5 = product.metafields.newmediaretailer.category | default: product.metafields.newmediaretailer.Category %}
           {% elsif metafield_type_5 == 'subcategory' %}
-            {% assign metafield_value_5 = product.metafields.custom.subcategory %}
+            {% assign metafield_value_5 = product.metafields.newmediaretailer.subcategory | default: product.metafields.newmediaretailer.Subcategory %}
           {% endif %}
           
           {% if metafield_value_5 == metafield_condition_5 %}
